[package]
name = "bililivecmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
serde = { version = "1.0.189", features = ["serde_derive"] }
serde_json = "1.0.107"
async-trait = "0.1.74"
flate2 = { version = "1.0.28", features = ["zlib"] }
