[package]
name = "bililivecmd-sqlite-handle"
version = "0.1.0"
edition = "2021"
description = "sqlite handle for cmd agent \nBilibili open-live SDK by Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zerocraft/bilirs"
homepage = "https://github.com/zerocraft/bilirs"
authors = ["zerocraft <zero.craft@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bililivecmd = { version = "0.1.2", path = "../bililivecmd" }
sea-orm = { version = "0.12.4", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
dotenvy = "0.15.7"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread", "time"] }
async-trait = "0.1.74"
